--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,13 @@
 form.signup,
 form.login {
   margin-top: 50px;
+  color: black;
+  font-weight: bold;
+}
+
+body {
+  background-image: url('/img/grocerystore.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
