Fixed problem with centering

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,12 @@ body {
   background-size: cover;
 }
 
+.mTitle {
+  text-align: center;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
